Fix facter histo and spacing

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -35,7 +35,7 @@ $input-alt-placeholder: $SuperLightGray;
 $error-prompt: rgba(232,114,110,0.6);
 
 // Text colors ＼(＾O＾)／
-$brand-text--darker: #414141;
+$brand-text--darker: #383838;
 $brand-text--dark: #686768;
 $brand-text--medium: #7d7d7d;
 
